src/test/ui/error-codes/E0093.stderr
error[E0093]: unrecognized intrinsic function: `foo`
  --> $DIR/E0093.rs:13:5
   |
LL |     fn foo();
   |     ^^^^^^^^^ unrecognized intrinsic

error: aborting due to previous error

For more information about this error, try `rustc --explain E0093`.
